# MP_Marketplace

./: .env  .pre-commit-config.yaml  .pylintrc  pyproject.toml
data/: orders.json  productos.csv  sellers.json
src/db/: __init__.py  session.py
src/marketplace/: cli.py  database.py  logic.py  mkp_database.py  models.py  orm.py  repository.py  service.py  services.py  settings.py
src/utils/: safe_db.py
tests/: test_logic.py
