[project]
name = "marketplace-mini"
version = "0.1.0"
description = "Mini proyecto de marketplace para nivelar de 0 a 1 con Pydantic, Ruff y uv."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7.0",
    "typing-extensions>=4.8.0",
    "typer>=0.9.0",
    "pydantic-settings>=2.11.0",
    "loguru>=0.7.0",
    "pytest>=8.4.2",
    "pre-commit>=4.3.0",
]
[project.optional-dependencies]
dev = ["ruff>=0.5.0", "pytest>=8.0.0"]
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Reglas razonables para jr (estilo, errores comunes, imports, mejoras Python)
select = ["E", "F", "I", "N", "UP", "B", "W"]
ignore = []
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[project.scripts]
marketplace = "marketplace.cli:main"
